# souls

./: .gitignore  git command  开发计划表.md
Souls-Engine/: CMakeLists.txt  README.md  install_glm.ps1  install_glm.sh  游戏说明.md  项目进度报告.md
Souls-Engine/assets/shaders/: basic.frag  basic.vert  depth.frag  depth.vert
Souls-Engine/game/: CMakeLists.txt  README.md  fps_main.cpp  main.cpp  游戏项目说明.md
Souls-Engine/include/KHR/: khrplatform.h
Souls-Engine/include/glad/: glad.h
Souls-Engine/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SoulsEngine.sln  SoulsEngine.vcxproj  SoulsEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  game_main.cpp  main.cpp
Souls-Engine/src/core/: Camera.cpp  Camera.h  FPSGameManager.cpp  FPSGameManager.h  FragmentEffectManager.cpp  FragmentEffectManager.h  GameManager.cpp  GameManager.h  ImGuiSystem.cpp  ImGuiSystem.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Material.cpp  Material.h  Node.cpp  Node.h  ObjectManager.cpp  ObjectManager.h  OpenGLContext.cpp  OpenGLContext.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SelectionSystem.cpp  SelectionSystem.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  WeaponModel.cpp  WeaponModel.cpp.tmp  WeaponModel.h  Window.cpp  (+3 more)
Souls-Engine/src/geometry/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  Frustum.cpp  Frustum.h  GridPlane.cpp  GridPlane.h  Mesh.cpp  Mesh.h  Prism.cpp  Prism.h  Sphere.cpp  Sphere.h
Souls-Engine/src/io/: AssimpLoader.cpp  AssimpLoader.h  OBJExporter.cpp  OBJExporter.h  OBJLoader.cpp  OBJLoader.h
Souls-Engine/tools/: blender_export.py
souls-main/: git command  开发计划表_中文.md
